Fixes Safari IOS not hiding overflow.

--- a/app/globals.css
+++ b/app/globals.css
@@ -70,9 +70,14 @@ body {
   background-color: var(--background) !important;
   color: #fff !important;
   text-align: center;
-  max-width: 100%;
+  max-width: 100vw;
   overflow-x: hidden;
   padding-bottom: 6rem !important;
+}
+
+.wrapper {
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 /* Reset Reloaded (Common Practice) */
